2008-11-02  Karl Berry  <karl@gnu.org>

	* util/texinfo.dtd (block): add smallquotation.

2008-10-28  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\codequoteleft): disable `! and `? ligatures
	for Spanish punctuation.

2008-10-25  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\quotationstart): new macro.
	(\quotation): call it.
	(\smallquotation): new env.
	(\Esmallquotation): new macro.
	Patch from Werner Lemberg, 21 Oct 2008 16:05:27.

	* doc/texinfo.txi (quotation, small, summary): update documentation,
	* doc/refcard/txirefcard.tex: update.

2008-10-20  Oleg Katsitadze  <olegkat@gmail.com>

	* doc/texinfo.tex (\includezzz, \doverbatiminclude):  Better fix
	to allow @-commands in file names, as set up by \indexnofonts.
	help-texinfo request from David Bateman, 13 Oct 2008 15:58:07.

2008-10-16  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\documentlanguage): read the txi-LL.tex file
	with \globaldefs=1 in effect.
	* doc/txi-LL.tex: set nonfrenchspacing (English and Portuguese) or
	frenchspacing (everything else), based on Babel's settings.
	Suggestion from Werner Lemberg, 15 Oct 2008 22:07:38.

2008-10-15  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\doverbatiminclude): special-case \@,
	so @@ can be used in the filename.
	help-texinfo request from David Bateman, 13 Oct 2008 15:58:07.

2008-10-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dosynindex): \ifx\csname...\endcsname
	has to compare to \relax, not \undefined.

	* doc/texinfo.tex (\txisetlanguage): new helper macro for the
	txi-??.tex files.
	* doc/txi-??.tex: add call to all files to set hyphenation
	patterns (if they are available) and hyphenmin values.	

2008-10-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/session.c (internal_next_line): New function.  A safer
	version of info_next_line, which ensures that the references work
	correctly on malformed info documents (such as gawk.info v. 3.1.5). 

2008-10-05  Sergey Poznyakoff  <gray@gnu.org.ua>
